# nrcd

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  local_api_keys.env.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
data/: README.md
docs/: API_KEYS.md
examples/: README.md  compare_improvement.py  load_dataset_example.py  race_context_example.py  standardize_one_result.py  track_compare_meets.py  track_indoor_examples.py  track_outdoor_examples.py  unstandardize_examples.py  xc_examples.py
src/nrcd/: __init__.py
src/nrcd/data/: __init__.py  schema.py
src/nrcd/enrich/: __init__.py  altitude.py  api_usage.py  batch.py  cache.py  config.py  context.py  geocode.py  guide.py  http.py  throttle.py  timezone_lookup.py  weather.py
src/nrcd/standardize/: __init__.py  altitude.py  batch.py  config.py  context.py  detail.py  events.py  factors.py  grade.py  pipeline.py  reference.py  sport.py  time.py  track.py  units.py  unstandardize.py  validation.py  wind.py
tests/: conftest.py  live_api_config.py  test_altitude_barometric.py  test_batch_and_detail.py  test_enrich.py  test_enrich_api_usage.py  test_enrich_batch.py  test_enrich_cache_throttle.py  test_enrich_live_openweather.py  test_events.py  test_geocode.py  test_grade_warning.py  test_indoor_track_venue.py  test_live_api_config.py  test_nrcd_schema.py  test_packaging.py  test_readme_examples.py  test_sport_and_docs.py  test_standardize.py  test_standardize_result.py  test_unstandardize.py
