[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "nrcd"
dynamic = ["version"]
description = "NRCD performance standardization formulas (cross country, track, road)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Jonathan A. Karr Jr", email = "jkarr@nd.edu" },
  { name = "Ryan M. Fryer" },
  { name = "Ben Darden" },
  { name = "Nicholas Pell" },
  { name = "Kayla Ambrose" },
  { name = "Evan Hall" },
  { name = "Ramzi K. Bualuan" },
  { name = "Nitesh V. Chawla" },
]
keywords = ["running", "cross-country", "standardization", "sports-analytics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

[tool.hatch.build.targets.sdist]
include = [
  "/examples",
]
dependencies = []

[project.optional-dependencies]
data = ["pandas>=2.0.0"]
apis = ["requests>=2.28.0"]
dev = ["pytest>=7.0", "build>=1.0.0", "requests>=2.28.0", "pandas>=2.0.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/National-Running-Club-Database/nrcd"
Repository = "https://github.com/National-Running-Club-Database/nrcd"
Documentation = "https://github.com/National-Running-Club-Database/nrcd#readme"
"Bug Tracker" = "https://github.com/National-Running-Club-Database/nrcd/issues"
Dataset = "https://zenodo.org/records/17917357"

[tool.hatch.version]
path = "src/nrcd/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nrcd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_api: live OpenWeather/USGS HTTP tests (requires local_api_keys.env)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E402", "E501"]
"src/nrcd/**/*.py" = ["E501"]
"src/nrcd/standardize/factors.py" = ["E501", "E741"]
"src/nrcd/standardize/track.py" = ["E402"]
"src/nrcd/standardize/wind.py" = ["E402"]
"tests/*" = ["E501", "E741", "F401", "I001"]
